fixed route structure

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
 
       <div class="text-end">
         {{#if loggedIn}}
-        <button id="logout" class="btn-no-style">Logout</button>
+        <button type="button" id="logout" class="btn-no-style">Logout</button>
         {{else}}
         <a href="/login"><button type="button" class="btn btn-outline-light me-2">Login / Sign Up</button></a>
         {{/if}}
@@ -36,5 +36,9 @@
 <body>
   {{{body}}}
 </body>
+
+{{#if loggedIn}}
+<script src="/js/logout.js"></script>
+{{/if}}
 
 </html>
