--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
       </ul>
 
       <div class="text-end">
-        {{#if loggedIn}}
+        {{#if logged_in}}
         <button type="button" id="logout" class="btn-no-style">Logout</button>
         {{else}}
         <a href="/login"><button type="button" class="btn btn-outline-light me-2">Login / Sign Up</button></a>
@@ -37,7 +37,7 @@
   {{{body}}}
 </body>
 
-{{#if loggedIn}}
+{{#if logged_in}}
 <script src="/js/logout.js"></script>
 {{/if}}
 
