--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,17 +1,37 @@
-<h2>Login</h2>
-
-<form class="form login-form">
-    <div class="form-group">
-        <label for="username-login">Username:</label>
-        <input class="form-input" type="text" id="username-login" />
+<div class="container">
+    <div class="row">
+        <div class="col-sm">
+            <h2>Login</h2>
+            <form class="form login-form">
+                <div class="form-group">
+                    <label for="username-login">Username:</label>
+                    <input class="form-input" type="text" id="username-login" />
+                </div>
+                <div class="form-group">
+                    <label for="password-login">Password:</label>
+                    <input class="form-input" type="password" id="password-login" />
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-primary" type="submit">login</button>
+                </div>
+            </form>
+        </div>
+        <div class="col-sm">
+            <h2>Sign Up</h2>
+            <form class="form sign-up-form">
+                <div class="form-group">
+                    <label for="username-sign-up">Username:</label>
+                    <input class="form-input" type="text" id="username-sign-up" />
+                </div>
+                <div class="form-group">
+                    <label for="password-sign-up">Password:</label>
+                    <input class="form-input" type="password" id="password-sign-up" />
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-primary" type="submit">Sign Up</button>
+                </div>
+            </form>
+        </div>
     </div>
-    <div class="form-group">
-        <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
-    </div>
-    <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
-    </div>
-</form>
-
+</div>
 <script src="/js/login.js"></script>
