--- a/views/partials/blog-post-details.handlebars
+++ b/views/partials/blog-post-details.handlebars
@@ -1,5 +1,7 @@
 <section class="card">
-    <h1>{{title}}</h1>
-    <p>{{'user.username'}}</p>
+    <h1>Title: {{title}}</h1>
+    <p>Date Created: {{format_date date_created}}</p>
+    <p>Created By: {{'user.username'}}</p>
     <p>{{content}}</p>
+
 </section>
