added data to individual blog pages

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,1 +1,5 @@
-<h1>blog actual</h1>
+<div>
+    <h1>{{BlogData.title}}</h1>
+    <p>{{BlogData.content}}</p>
+    <p>Created by: {{BlogData.user.username}} at {{format_date BlogData.date_created}}</p>
+</div>
