added comment seeds

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -3,3 +3,9 @@
     <p>{{BlogData.content}}</p>
     <p>Created by: {{BlogData.user.username}} at {{format_date BlogData.date_created}}</p>
 </div>
+<div>
+    {{!-- comment display --}}
+</div>
+<div>
+    {{!-- new comment entry --}}
+</div>
