--- a/views/partials/comment-details.handlebars
+++ b/views/partials/comment-details.handlebars
@@ -1,1 +1,4 @@
-<h1>comment</h1>
+<div>
+    <p>{{content}}</p>
+    <p>By {{'user.username'}} on {{format_date date_created}}, {{format_time date_created}}</p>
+</div>
