starting dashboard display

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,5 @@
 <div>
-    dashbaord
-    {{!-- blog post for current user --}}
+    {{#each dbBlogData as |UserBlogposts|}}
+    {{>blog-dashboard}}
+    {{/each}}
 </div>
