added buttons to dashboard

--- a/views/partials/blog-dashboard.handlebars
+++ b/views/partials/blog-dashboard.handlebars
@@ -1,1 +1,11 @@
-<h1>blog entry</h1>
+<div>
+    <a href="/blog/{{id}}">
+        <h3>{{title}}</h3>
+        <p>{{content}}</p>
+    </a>
+    <div>
+        <button id="editDashBtn">edit</button>
+        <button id="deleteDashBtn">delete</button>
+    </div>
+</div>
+<script src="/js/dashboard.js"></script>
