added add comments button

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -11,4 +11,10 @@
 </div>
 <div>
     <h3>Leave a comment:</h3>
+    <textarea>
+
+    </textarea>
+    <br>
+    <button id="submitComment">Submit Comment</button>
 </div>
+<script src="/js/comment.js"></script>
