added button for new blog post

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,3 +3,9 @@
     {{>blog-dashboard}}
     {{/each}}
 </div>
+<br>
+<div>
+    <button id="createNewBlogPost">Create New Blog Post</button>
+</div>
+
+<script src="/js/dashboard.js"></script>
