--- a/views/partials/blog-dashboard.handlebars
+++ b/views/partials/blog-dashboard.handlebars
@@ -4,8 +4,7 @@
         <p>{{content}}</p>
     </a>
     <div>
-        <button id="editDashBtn">edit</button>
-        <button id="deleteDashBtn">delete</button>
+        <button class="editDashBtn">edit</button>
+        <button class="deleteDashBtn">delete</button>
     </div>
 </div>
-<script src="/js/dashboard.js"></script>
