added comments functionality

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -11,9 +11,7 @@
 </div>
 <div>
     <h3>Leave a comment:</h3>
-    <textarea>
-
-    </textarea>
+    <textarea id='commentContent'></textarea>
     <br>
     <button id="submitComment">Submit Comment</button>
 </div>
