moved and renamed js

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -21,4 +21,4 @@
     <br>
     <button id="submitComment">Submit Comment</button>
 </div>
-<script src="/js/comment.js"></script>
+<script src="/js/blog.js"></script>
