--- a/views/partials/blog-post-details.handlebars
+++ b/views/partials/blog-post-details.handlebars
@@ -1,7 +1,7 @@
 <a href="/blog/{{id}}">
     <section class="card">
         <h1>Title: {{title}}</h1>
-        <p>Date Created: {{format_date date_created}}</p>
+        <p>Date Created: {{format_date date_created}} at {{format_time date_created}}</p>
         <p>Created By: {{'user.username'}}</p>
         <p>{{content}}</p>
     </section>
